k8s/favorites.yaml
apiVersion: v1
kind: Service
metadata:
  name: favorites
  labels:
    app: favorites
spec:
  ports:
  - port: 8383
    name: http
  selector:
    app: favorites
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: favorites
  labels:
    app: favorites
spec:
  replicas: 1
  selector:
    matchLabels:
      app: favorites
  template:
    metadata:
      labels:
        app: favorites
    spec:
      serviceAccountName: favorites-sa
      containers:
      - name: favorites
        image: favorites:0.1.0
        ports:
        - containerPort: 8383
