k8s/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: monolith-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: monolith
spec:
  hosts:
  - "*"
  gateways:
  - monolith-gateway
  http:
    - match:
        - headers:
            canary:
              exact: "rails_next"
      route:
        - destination:
            host: monolith.default.svc.cluster.local
            subset: v2
            port:
                number: 9292
          weight: 100
    - match:
        - {}
      route:
        - destination:
            host: monolith.default.svc.cluster.local
            subset: v1
            port:
                number: 9292
          weight: 90
        - destination:
            host: monolith.default.svc.cluster.local
            subset: v2
            port:
                number: 9292
          weight: 10
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: monolith
spec:
  host: monolith
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
